fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,17 @@ body {
   flex-direction: column;
 }
 
+.header, .hero {
+  padding-bottom: 100px !important;
+}
+
 /* This is the header */
 
 .header {
   display: flex;
-  flex: 1;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0px 400px;
   background-color: #1F2937;
   color: #F9FAFB;
   font-size: 24px;
@@ -37,10 +41,10 @@ ul {
 
 .hero {
   display: flex;
-  flex: 1;
   align-items: center;
-  justify-content: center;
-  gap: 125px;
+  justify-content: space-between;
+  padding: 0px 400px;
+  gap: 50px;
   background-color: #1F2937;
 }
 
@@ -71,7 +75,7 @@ button {
 }
 
 img, .hero-image {
-  width: 550px;
+  width: 600px;
   height: 250px;
   object-fit: cover;
   object-position: 50% 70%;
